# yes-music-guided-tour

./: .firebaserc  .gitignore  README.md  flutter_launcher_icons.yaml  package-lock.json  package.json  pubspec.yaml  svelte.config.js
.firebase/: hosting.YnVpbGQ.cache  hosting.ZGlzdA.cache
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/guidedtour/yesmusic/: MainActivity.kt
assets/__MACOSX/: ._videos
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
src/: app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/lib/components/: Button.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/[lang]/: +page.svelte
src/routes/[lang]/[video]/: +page.svelte
static/: manifest.json
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
