[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = [] }
surrealdb = { version = "2", features = [
  "protocol-http",
  "rustls",
], default-features = false }
tokio = { version = "1.49.0", features = ["full"] }
error-stack = "0.5.0"
derive_more = { version = "2.0.1", features = ["full"] }
tauri-plugin-fs = "2.4.5"
